--- a/art12/templates/factsheet/species.html
+++ b/art12/templates/factsheet/species.html
@@ -1,7 +1,7 @@
 {% extends 'layout_pdf.html' %}
 
 {% block content %}
-  {% from 'common/_macros.html' import trend_td %}
+  {% from 'common/_macros.html' import trend_td, link %}
 
   <h1 class="cover-title">Species name: {{ obj.speciesname }}</h1>
   <h2 class="cover-subtitle">{{ obj.subunit }}</h2>
@@ -75,6 +75,8 @@
     subspecies level. The EU trends cover following subspecies/populations:
     {{ obj.second_list | join(', ') }}.</p>
 
+    <i>&lt;Picture 1&gt;</i>
+
   </section>
 
   <section>
@@ -123,6 +125,59 @@
     </table>
 
     <p>See the endnotes for more information<sup>ii</sup></p>
+
+    <i>&lt;Picture 5&gt;</i>
+    <br>
+    <i>&lt;Picture 6&gt;</i>
+
   </section>
+
+  {% if obj.is_spa_trigger %}
+    <section>
+      <header>
+        <h2>Main pressures and threats reported by Member States</h2>
+      </header>
+      <p>For the bird species triggering SPA classification Member States were
+      asked to report the 20 most important threats and pressures using an
+      agreed hierarchical list which can be found on the Article 12 Reference
+      Portal
+      {{ link("http://bd.eionet.europa.eu/activities/Reporting/Article_12/reference_portal") }}.
+      Pressures are activities which are currently having an impact on
+      the species and threats are activities expected to have an impact in the
+      near future. The table below only contains information form Member
+      States, where a species triggers SPA classification.
+      Pressures and threats were ranked in three classes ‘high, medium and low
+      importance’, the table  below only shows pressures and threats classed as
+      ‘high’, for some species there were less than ten pressures and threats
+      reported as highly important.</p>
+
+      <p>
+        <strong>
+          Ten most frequently reported ‘highly important’ conservation measures
+        </strong>
+      </p>
+
+      <table class='table-simple'>
+        <thead>
+          <tr>
+            <th>Code</th>
+            <th style="width: 100%; text-align: left">Activity</th>
+            <th>% of frequency</th>
+          </tr>
+        </thead>
+        <tbody>
+          {% for threat in obj.threats %}
+            <tr>
+              <td>{{ threat.code }}</td>
+              <td>{{ threat.name }}</td>
+              <td>{{ threat.pc }}</td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
+
+
+    </section>
+  {% endif %}
 
 {% endblock %}
