[factsheet] Add remaining sections, ref #24521.

--- a/art12/templates/common/_macros.html
+++ b/art12/templates/common/_macros.html
@@ -43,5 +43,5 @@
 {% endmacro %}
 
 {% macro link(url) %}
-  (<a href="{{ url }}">{{ url }}</a>)
+  <a href="{{ url }}">{{ url }}</a>
 {% endmacro %}
