--- a/art12/templates/factsheet/header.html
+++ b/art12/templates/factsheet/header.html
@@ -40,10 +40,10 @@
   <body onload="subst()">
     <div class="header">
       <div class="title">
-        <strong>Species name: <i>{{ subject|safe }}</i></strong>
+        <strong>Species: <i>{{ subject|safe }}</i></strong>
         &nbsp;[{{ subunit }}]
       </div>
-      <div class="subtitle">Report under the Art. 12 of the Birds Directive</div>
+      <div class="subtitle">Report under the Article 12 of the Birds Directive</div>
     </div>
     <div class="header-first">
       <div class="logo">
@@ -52,7 +52,7 @@
         <i>European Topic Centre <br>on Biological Diversity</i>
       </div>
       <p>
-        Report under the Art. 12 of the Birds Directive<br>Period {{ period }}
+        Report under the Article 12 of the Birds Directive<br>Period {{ period }}
       </p>
     </div>
   </body>
