[maps] Refactor maps retrieval.

--- a/art12/templates/summary/eu_map.html
+++ b/art12/templates/summary/eu_map.html
@@ -1,11 +1,5 @@
+{% extends 'layout_popup.html' %}
+
 {% block content %}
-  <body>
-    {% if map_uri %}
-      <img src="{{ map_uri }}">
-    {% else %}
-      <p>
-        There is no map available for the selected species.
-      </p>
-    {% endif %}
-  </body>
+  <img src="{{ map_url }}">
 {% endblock %}
