--- a/art12/templates/summary/eu_map.html
+++ b/art12/templates/summary/eu_map.html
@@ -1,5 +1,9 @@
 {% extends 'layout_popup.html' %}
 
 {% block content %}
-  <img src="{{ map_url }}">
+  {% if map_url %}
+    <img src="{{ map_url }}">
+  {% else %}
+    <p>There is no map available for the selected species.</p>
+  {% endif %}
 {% endblock %}
