--- a/art12/templates/factsheet/species.html
+++ b/art12/templates/factsheet/species.html
@@ -54,7 +54,7 @@
         </tr>
       </thead>
       <tbody>
-      {% for row in obj.etc_birds %}
+      {% for row in obj.etc_birds.filter_by(additional_record=0) %}
         <tr class="stripe_row">
           <td>
             {{ row.br_population_size or '' }}
@@ -95,11 +95,63 @@
       (each of them presented in a separate factsheet).</p>
     {% endif %}
 
-    <i>&lt;Picture 1&gt;</i>
-
   </section>
 
-  <div class="page-breaker"></div>
+  {% set etc_birds_subspecies = obj.etc_birds.filter_by(additional_record=-1) %}
+  {% if etc_birds_subspecies.count() %}
+  <section>
+    <header>
+      <h2>Additional assessment at the subspecies level</h2>
+    </header>
+
+    <table class="complex_datatable">
+      <thead>
+        <tr>
+          <th rowspan="2">Breeding population size</th>
+          <th colspan="2">Breeding population trend</th>
+          <th rowspan="2">Range area</th>
+          <th colspan="2">Breeding range trend</th>
+          <th rowspan="2">Winter population size</th>
+          <th colspan="2">Winter population trend</th>
+          <th rowspan="2">Population status</th>
+        </tr>
+        <tr>
+          <th>Short term</th>
+          <th>Long term</th>
+          <th>Short term</th>
+          <th>Long term</th>
+          <th>Short term</th>
+          <th>Long term</th>
+        </tr>
+      </thead>
+      <tbody>
+      {% for row in etc_birds_subspecies %}
+        <tr class="stripe_row">
+          <td>
+            {{ row.br_population_size or '' }}
+            {{ row.br_population_size_unit or '' }}
+          </td>
+          {{ trend_td(row.br_population_trend) }}
+          {{ trend_td(row.br_population_trend_long) }}
+          <td>{{ row.br_range_surface_area_downrounded or '' }}</td>
+          {{ trend_td(row.br_range_trend) }}
+          {{ trend_td(row.br_range_trend_long) }}
+          <td>
+            {{ row.wi_population_size or '' }}
+            {{ row.wi_population_size_unit or '' }}
+          </td>
+          {{ trend_td(row.wi_population_trend) }}
+          {{ trend_td(row.wi_population_trend_long) }}
+          <td>{{ row.conclusion_status_label or '' }}</td>
+        </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+  </section>
+  {% endif %}
+
+  <i>&lt;Picture 1&gt;</i>
+
   <section>
     <header>
       <h2>Trends at the Member State level</h2>
@@ -173,8 +225,8 @@
 
   </section>
 
-  <div class="page-breaker"></div>
   {% if obj.is_spa_trigger %}
+  <div class="page-breaker"></div>
     <section>
       <header>
         <h2>Main pressures and threats reported by Member States</h2>
