--- a/art12/templates/factsheet/footer.html
+++ b/art12/templates/factsheet/footer.html
@@ -21,9 +21,10 @@
     </script>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   </head>
-  <body style="font-family: sans-serif; font-size: 9pt; text-align: center;" onload="subst()">
-    <div>
-      <span class="page">AAA</span>
+  <body style="border:0; margin: 0px;font-family: sans-serif;font-size: 9pt;" onload="subst()">
+    <div style="width: 20%;">
+      <hr noshade="noshade" color="#000000" size="1">
+      Page <span class="page"></span>
     </div>
   </body>
 </html>
