[factsheet] Center maps.

--- a/art12/static/css/print-factsheet.css
+++ b/art12/static/css/print-factsheet.css
@@ -303,6 +303,9 @@ header .subtitle {
 }
 img {
   width: 12.0175cm;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 .warning {
   font-size: 11pt;
